--- a/OneDrive/Desktop/PSD-2024/VisionAI-main/.circleci/config.yml
+++ b/OneDrive/Desktop/PSD-2024/VisionAI-main/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
           name: Install Dependencies
           command: pip install -r requirements.txt
       - run:
+          name: Run Tests
+          command: pytest
+      - run:
           name: Build Docker Image
           command: |
             docker build -t $DOCKERHUB_USERNAME/visionai:${CIRCLE_SHA1} .
@@ -34,4 +37,4 @@ workflows:
       - build_and_push:
           filters:
             branches:
-              only: docker-branch
+              only: main
