--- a/OneDrive/Desktop/PSD-2024/VisionAI-main/.circleci/config.yml
+++ b/OneDrive/Desktop/PSD-2024/VisionAI-main/.circleci/config.yml
@@ -1,40 +1,84 @@
 version: 2.1
 
-jobs:
-  build_and_push:
+executors:
+  python-executor:
     docker:
-      - image: cimg/python:3.8
+      - image: circleci/python:3.10
+    environment:
+      DISPLAY: :99
+
+  docker-executor:
+    docker:
+      - image: docker:20.10.7
+
+jobs:
+
+  build-and-test:
+    executor: python-executor
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y xvfb libxi-dev libxtst-dev xdotool
+            sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 x11-utils
+            python -m venv venv
+            . venv/bin/activate
+            pip install --upgrade pip
+            pip install -r requirements.txt
+            pip install pytest-qt
+            pip install pytest pytest-qt PyQt5
+            pip install pytest pytest-xvfb pyautogui
+      - run:
+          name: Setup PYTHONPATH
+          command: |
+            export PYTHONPATH="$PYTHONPATH:/home/circleci/project"
+      - run:
+          name: Run tests
+          command: |
+            . venv/bin/activate
+            xvfb-run -a pytest tests/test_AI_NumberOfOutputs.py -v
+            xvfb-run -a pytest tests/test_AI_PredictedCity.py -v
+            xvfb-run -a pytest tests/test_AI_Preprocessing.py -v
+            xvfb-run -a pytest tests/test_ButtonPanel.py -v
+            xvfb-run -a pytest tests/test_IconsExist.py -v
+            xvfb-run -a pytest tests/test_InformationDialog.py -v
+            xvfb-run -a pytest tests/test_ModelExist.py -v
+            xvfb-run -a pytest tests/test_SelectMethod.py -v
+            xvfb-run -a pytest tests/test_sort_button.py -v
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./*
+
+  build-and-push:
+    executor: docker-executor
     steps:
       - checkout
       - setup_remote_docker:
-          version: 19.03.13
+          version: 20.10.7
+      - attach_workspace:
+          at: .
       - run:
-          name: Print Docker Hub Username
-          command: echo "Docker Hub Username is '$DOCKERHUB_USERNAME'"
+          name: Build Docker image
+          command: docker build -t $DOCKER_USER/vision_ai:${CIRCLE_SHA1} .
       - run:
-          name: Install Dependencies
-          command: pip install -r requirements.txt
+          name: Log in to Docker Hub
+          command: echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
       - run:
-          name: Run Tests
-          command: pytest
-      - run:
-          name: Build Docker Image
-          command: |
-            docker build -t $DOCKERHUB_USERNAME/visionai:${CIRCLE_SHA1} .
-      - run:
-          name: Authenticate with Docker Hub
-          command: |
-            echo "$DOCKERHUB_PASS" | docker login --username $DOCKERHUB_USERNAME --password-stdin
-      - run:
-          name: Push Docker Image to Docker Hub
-          command: |
-            docker push $DOCKERHUB_USERNAME/visionai:${CIRCLE_SHA1}
+          name: Push Docker image
+          command: docker push $DOCKER_USER/vision_ai:${CIRCLE_SHA1}
 
 workflows:
-  version: 2.1
-  build_and_deploy:
+  version: 2
+  build-test-and-push:
     jobs:
-      - build_and_push:
+      - build-and-test
+      - build-and-push:
+          requires:
+            - build-and-test
           filters:
             branches:
-              only: main
+              only:
+                - main
